<resources>
    <string name="app_name">TaskView</string>
    <string name="str_sign_in">Iniciar Sesion</string>
    <string name="str_forgot_password">Olvide contraseña</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_sign_up">registrar</string>
    <string name="str_username">Nombre de usuario</string>
    <string name="str_create_account">Crear cuenta</string>
    <string name="str_sign_out">Salir</string>
    <string name="str_project_name">Nombre de proyecto</string>
    <string name="str_project_description">Descripción del Proyecto</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_done">Hecho</string>
    <string name="str_backlog">Backlog</string>
    <string name="str_todo">To Do</string>
    <string name="str_wip">Wip</string>
    <string name="str_code_review">Code Review</string>
    <string name="str_accepted">Accepted</string>
    <string name="str_task_title">Titulo de actividad</string>
    <string name="str_task_description">Descripción de actividad</string>
    <string name="str_responsible">Responsable</string>
    <string name="str_time">Puntos</string>
    <string name="str_add_task">Agregar tarea</string>
    <string name="str_search_user">Buscar usuario</string>
    <string name="str_search">Buscar</string>
    <string name="str_hours">Esfuerzo</string>
</resources>
