<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="@dimen/default_1_10"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonMain.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:paddingStart="@dimen/default_3_10"
            android:paddingTop="@dimen/default_1_10"
            android:text="@string/str_cancel"
            android:textColor="@color/colorBlack"
            android:paddingEnd="@dimen/default_3_10" />

        <Button
            android:id="@+id/btn_done"
            style="@style/ButtonMain.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_done"
            android:paddingStart="@dimen/default_3_10"
            android:paddingTop="@dimen/default_1_10"
            android:text="@string/str_done"
            android:paddingEnd="@dimen/default_3_10"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_2_10"
        android:paddingEnd="@dimen/default_3_10"
        android:paddingStart="@dimen/default_3_10"
        android:paddingTop="@dimen/default_2_10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_task_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1">
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_task_description"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_responsible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_responsible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_responsible"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:focusableInTouchMode="false"
                android:focusable="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_time"
                android:imeOptions="actionNext"
                android:inputType="numberSigned"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</RelativeLayout>