<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_round_borders">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_2_10"
        android:paddingEnd="@dimen/default_3_10"
        android:paddingStart="@dimen/default_3_10"
        android:paddingTop="@dimen/default_2_10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_task_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1">
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_address_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_task_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="@dimen/default_1_10"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonMain.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:paddingStart="@dimen/default_3_10"
            android:paddingTop="@dimen/default_1_10"
            android:text="@string/str_cancel"
            android:textColor="@color/colorGray"
            android:paddingEnd="@dimen/default_3_10" />

        <Button
            android:id="@+id/btn_done"
            style="@style/ButtonMain.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_done"
            android:paddingStart="@dimen/default_3_10"
            android:paddingTop="@dimen/default_1_10"
            android:text="@string/str_done"
            android:paddingEnd="@dimen/default_3_10"/>
    </LinearLayout>
</LinearLayout>