<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tektonlabs.taskview.ui.activities.SignUpActivity">

    <ImageView
        android:layout_width="@dimen/default_10_15"
        android:layout_height="@dimen/default_10_15"
        android:layout_above="@+id/ll_sign_up_fields"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/default_4_10"
        android:layout_marginTop="@dimen/default_4_10"
        android:src="@drawable/tk_logo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/ll_sign_up_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/default_2_10"
        android:layout_marginStart="@dimen/default_2_10"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_1_10"
                android:hint="@string/str_username"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/default_1_10"
                android:paddingLeft="@dimen/default_2_10"
                android:paddingRight="@dimen/default_2_10"
                android:paddingTop="@dimen/default_1_10"
                android:singleLine="true"
                android:textSize="@dimen/default_3_5_sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_1_10"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/default_1_10"
                android:paddingLeft="@dimen/default_2_10"
                android:paddingRight="@dimen/default_2_10"
                android:paddingTop="@dimen/default_1_10"
                android:singleLine="true"
                android:textSize="@dimen/default_3_5_sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_1_10"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/default_1_10"
                android:paddingLeft="@dimen/default_2_10"
                android:paddingRight="@dimen/default_2_10"
                android:paddingTop="@dimen/default_1_10"
                android:text="password"
                android:textSize="@dimen/default_3_5_sp"
                tools:ignore="HardcodedText" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/v_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_4_10"
            android:layout_marginTop="@dimen/default_1_10"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_3_5">

            <Button
                android:id="@+id/btn_create"
                style="@style/ButtonMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/str_create_account" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/v_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
